--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     <div class="sidebar">
         <div class="logo">
             <i class="fas fa-cube"></i>
-            <span>PantherHub</span>
+            <span>Xeno X</span>
         </div>
         <ul>
             <li><a href="#welcome" class="active" onclick="setActive(this)"><i class="fas fa-home"></i></a></li>
