--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
         <main>
             <!-- Welcome Section -->
             <section id="welcome" class="welcome-section">
-                <h2>Welcome to PantherHub</h2>
-                <p>PantherHub is a Roblox executor that brings you fun and better features!</p>
+                <h2>Welcome to Xeno X</h2>
+                <p>Xeno X is a Roblox executor that brings you fun and better features!</p>
             </section>
 
             <!-- Execution Section -->
@@ -257,7 +257,7 @@
             <!-- About Section -->
             <section id="about">
                 <h2>About Us</h2>
-                <p>PantherHub is a Roblox executor that brings you fun and better features!</p>
+                <p>Xeno X is a Roblox executor that brings you fun and better features!</p>
             </section>
         </main>
         <div class="dialog-overlay" id="dialogOverlay">
